fix: line break on notes, add color to status

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -227,62 +227,10 @@ input:-moz-placeholder {
   text-decoration: underline;
 }
 
-/* * Sidebar */
-.sidebar {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  z-index: 100;
-  /* Behind the navbar */
-  padding: 48px 0 0;
-  /* Height of navbar */
-  box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
-}
-
-.sidebar-sticky {
-  position: relative;
-  top: 0;
-  height: calc(100vh - 48px);
-  padding-top: .5rem;
-  overflow-x: hidden;
-  overflow-y: auto;
-}
-
-@supports ((position:-webkit-sticky) or (position:sticky)) {
-  .sidebar-sticky {
-    position: -webkit-sticky;
-    position: sticky;
-  }
-}
-
-.sidebar .nav-link {
-  font-weight: 500;
-  color: #333;
-}
-
-.sidebar .nav-link .feather {
-  margin-right: 4px;
-  color: #999;
-}
-
-.sidebar-heading {
-  font-size: .75rem;
-  text-transform: uppercase;
-}
-
 .nav-link {
   padding: 1.5rem 1rem;
   border-bottom: 1px solid #dde0e2;
   cursor: pointer;
-}
-
-.sidebar .nav-link.active,
-.sidebar a:hover, .sidebar
-a:not([href]):not([tabindex]):focus, .sidebar
-a:not([href]):not([tabindex]):hover {
-  color: #32364d;
-  background: #ffffff00;
 }
 
 /* * Content */
@@ -299,6 +247,10 @@ a:not([href]):not([tabindex]):hover {
   margin-left: 15px;
   position: relative;
   top: -1px;
+}
+
+.line-breaker {
+  white-space: pre-line;
 }
 
 /* * Navbar */
@@ -424,10 +376,6 @@ body .navbar-brand {
 .pt-3,
 .py-3 {
   padding-top: 2.4rem !important;
-}
-
-.sidebar-sticky {
-  padding-top: 1.2rem !important;
 }
 
 /* Form */
@@ -640,21 +588,6 @@ body .table thead th {
     display: block;
   }
 
-  .sidebar-sticky {
-    padding-top: 1.9rem !important;
-    height: auto;
-  }
-
-  .sidebar-sticky .nav li {
-    width: 50%;
-    text-align: center;
-    border-right: 1px solid #c7ceff;
-  }
-
-  .sidebar-sticky .nav li:last-child {
-    border: none;
-  }
-
   .no-data img {
     max-width: 100%;
     margin-top: 0;
@@ -683,10 +616,6 @@ body .table thead th {
     width: 50%;
     float: left;
     display: inherit;
-  }
-
-  .sidebar {
-    padding: 40px 0 0;
   }
 
   footer br {
